Universal API easier access to path #11746